--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,10 @@
 AllCops:
   TargetRubyVersion: 2.6
+  SuggestExtensions: false
+  NewCops: enable
+
+Style/Documentation:
+  Enabled: false
 
 Style/StringLiterals:
   Enabled: true
