--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,3 +16,9 @@ Style/StringLiteralsInInterpolation:
 
 Layout/LineLength:
   Max: 120
+
+Metrics/MethodLength:
+  Max: 20
+
+Naming/MemoizedInstanceVariableName:
+  Enabled: false
