--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,6 +17,10 @@ Style/StringLiteralsInInterpolation:
 Layout/LineLength:
   Max: 120
 
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*.rb'
+
 Metrics/MethodLength:
   Max: 20
 
