Add init command (#2)
* Auto require all components

* Add gem byebug

* Auto require and include all command classes

* Update .rubocop.yml

* Change rgit require to require_relative

* Update require byebug

* Add init command

* Refactor head_file

* Update .rubocop.yml

* Wrap all test cases in tmpdir

* Refactor head_file and head_file=

* Refactor Base initialize

* Update Init#perform

* Add ut for Init

* Update spec.files

* Upgrade version to 0.1.1

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,3 +16,13 @@ Style/StringLiteralsInInterpolation:
 
 Layout/LineLength:
   Max: 120
+
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*.rb'
+
+Metrics/MethodLength:
+  Max: 20
+
+Naming/MemoizedInstanceVariableName:
+  Enabled: false
